--- a/SAO-EP/Src/Reports.fx.yaml
+++ b/SAO-EP/Src/Reports.fx.yaml
@@ -9,7 +9,7 @@
                         'Seminar/Webinar/Symposium/Forum',
                         'Leadership Training',
                         'Community Ext',
-                        'Marketing',
+                        Marketing,
                         'Religious/Spiritual',
                         'Academic Competition',
                         'Culture & Arts',
@@ -29,7 +29,7 @@
                         'Seminar/Webinar/Symposium/Forum',
                         'Leadership Training',
                         'Community Ext',
-                        'Marketing',
+                        Marketing,
                         'Religious/Spiritual',
                         'Academic Competition',
                         'Culture & Arts',
