Fixed: Reports Contents + Approval Draft

--- a/SAO-EP/CanvasManifest.json
+++ b/SAO-EP/CanvasManifest.json
@@ -142,8 +142,7 @@
     "Refresher Tester",
     "Screen1",
     "Screen2",
-    "Screen4",
     "Reports",
-    "Screen3"
+    "ApprovalDraft"
   ]
 }
