--- a/SAO-EP/Src/Reports.fx.yaml
+++ b/SAO-EP/Src/Reports.fx.yaml
@@ -241,7 +241,7 @@
                         Height: =32
                         LayoutMinHeight: =32
                         LayoutMinWidth: =Parent.Width
-                        Text: ="Featured item"
+                        Text: ="<Insert Another Report Here>"
                         Width: =Parent.Width
                         X: =0
                         Y: =0
@@ -293,7 +293,8 @@
                         AccessibleLabel: ="Featured item button"
                         Appearance: ='ButtonCanvas.Appearance'.Transparent
                         DisplayMode: =DisplayMode.Edit
-                        FontSize: =20
+                        FillPortions: =0.5
+                        FontSize: =23
                         FontWeight: =FontWeight.Bold
                         Height: =32
                         LayoutMinHeight: =32
@@ -307,12 +308,12 @@
                     DescriptionText41 As Text:
                         Align: ='TextCanvas.Align'.Center
                         DisplayMode: =DisplayMode.Edit
-                        FillPortions: =1
+                        FillPortions: =0.5
                         Height: =32
                         LayoutMinHeight: =32
                         LayoutMinWidth: =Parent.Width
                         Size: =16
-                        Text: ="Short description or engaging message"
+                        Text: ="Frequency of your events per type"
                         VerticalAlign: ='TextCanvas.VerticalAlign'.Top
                         Width: =Parent.Width
                         X: =0
@@ -320,6 +321,7 @@
                         ZIndex: =28
 
                 Container8 As groupContainer.manualLayoutContainer:
+                    FillPortions: =2
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
                     ZIndex: =27
@@ -331,30 +333,21 @@
                         Y: =-52
                         ZIndex: =1
 
-                        Title2_2 As label:
-                            Align: =Align.Center
-                            Height: =41
-                            Text: ="Chart Title"
-                            Width: =420
-                            X: =3
-                            Y: =25
-                            ZIndex: =2
-
                         ColumnChart2_1 As barChart:
-                            Height: =395
+                            Height: =421
                             Items: =EventTypeReports
                             NumberOfSeries: =9
-                            Width: =328
+                            Width: =362
                             X: =22
                             ZIndex: =3
 
                         Legend1_1 As legend:
-                            Height: =132
+                            Height: =141
                             ItemColorSet: =ColumnChart2_1.ItemColorSet
                             Items: =ColumnChart2_1.SeriesLabels
-                            Width: =336
-                            X: =45
-                            Y: =343
+                            Width: =371
+                            X: =47
+                            Y: =365
                             ZIndex: =4
 
             Container42_1 As groupContainer.verticalAutoLayoutContainer:
@@ -382,7 +375,16 @@
                     Size: =20
                     Text: |-
                         =//"Expenditures"
-                        Concatenate( Round(Sum(RecordsGallery1.AllItems, TotalExpenses) / CurrentUserOrg.orgBaseBudget * 100, 2), "% Budget Used")
+                        
+                        If(CurrentUser.userRoles.Id <> 1,
+                            Concatenate( Round(Sum(RecordsGallery1.AllItems, TotalExpenses) / CurrentUserOrg.orgBaseBudget * 100, 2), "% Budget Used"),
+                            ""
+                        )
+                    Visible: |-
+                        =If(CurrentUser.userRoles.Id <> 1,
+                            true,
+                            false
+                        )
                     Width: =400
                     X: =40
                     Y: =40
