tried customizing for miss revvie

--- a/SAO-EP/CanvasManifest.json
+++ b/SAO-EP/CanvasManifest.json
@@ -74,6 +74,7 @@
       "pdffunction": false,
       "powerfxdecimal": false,
       "powerfxv1": false,
+      "preferpayamlv3inux": false,
       "primaryoutputpropertycoerciondeprecated": true,
       "proactivecontrolrename": false,
       "projectionmapping": true,
